# WhiteboardEditor

./: .gitignore  LICENSE  README.md  docker-compose.yml  example.env  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/set_up_rest_api_testdb/: action.yaml
.github/workflows/: build_rest_api_testdb.yml  ec2_deploy_testing.yml  monitor_staging_instance.yml  run_tests.yml  test_frontend.yml  test_rest_api.yml  test_reverse_proxy.yml  test_web_socket_server.yml
Auth/: Dockerfile
Frontend/: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
Frontend/src/: App.css  App.tsx  AuthContext.tsx  app.config.ts  index.css  main.tsx  utils.ts
Frontend/src/api/: axios.ts
Frontend/src/components/: AboutUsInfoCard.tsx  AccountSettings.tsx  AllowedUsersPopover.tsx  AttributeFillColor.tsx  AttributeFontColor.tsx  AttributeFontSize.tsx  AttributeLabel.tsx  AttributeMenuItem.tsx  AttributeStrokeColor.tsx  AttributeStrokeWidth.tsx  AuthForm.tsx  AuthInput.tsx  Canvas.tsx  (+35 more)
RestAPI/: .dockerignore  Dockerfile  jest.config.js  openapi.yml  package-lock.json  package.json  tsconfig.json
RestAPI/src/: app.ts  main.ts  utils.ts
RestAPI/tests/: health.test.ts  users.test.ts  whiteboards.test.ts
ReverseProxy/: .dockerignore  Dockerfile  make-nginx-conf.sh  nginx.conf  run.sh
TestDatabase/: Dockerfile  init-db.js
WebSocketServer/: .dockerignore  Cargo.toml  Dockerfile
WebSocketServer/src/: dummy.rs  lib.rs  main.rs  unit_tests.rs
(+97 files in other folders)
