[package]
name = "web_socket_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.42"
mongodb = { version = "3.3.0" }

[[bin]]
# Dummy build target to make Cargo happy when installing dependencies.
# Avoids needing to re-install dependencies every time the service is rebuilt.
name = "dummy"
path = "src/dummy.rs"
